<resources>
    <string name="app_name">acolher</string>
    <string name="title_activity_maps">Map</string>
    <string name="label_cadastro_nome">Nome completo</string>
    <string name="label_cadastro_email">Email</string>
    <string name="label_cadastro_telefone">Telefone</string>
    <string name="label_cadastro_CPF">CPF</string>
    <string name="label_cadastro_CRP_CRM">CRP ou CRM</string>
    <string name="label_cadastro_password">Senha</string>
    <string name="label_cadastro_datanascimento">Data de nascimento</string>
    <string name="label_senha_atual">Senha Atual</string>
    <string name="label_senha">Senha</string>
    <string name="label_nova_senha">Nova Senha</string>
    <string name="label_confirmar_nova_senha">Confirmar Nova Senha</string>
    <string name="label_button_confirmar_nova_senha">Alterar Senha</string>
    <string name="label_button_entrar">Entrar</string>
    <!-- label de instituicao. -->
    <string name="label_cadastro_instituicao_nome">Nome da instituição</string>
    <string name="label_cadastro_instituicao_cnpj">CNPJ</string>
    <string name="label_cadastro_instituicao_email">Email</string>
    <string name="label_cadastro_instituicao_password">Senha</string>
    <string name="label_cadastro_instituicao_telefone">Telefone</string>
    <string name="error_instituicao_nome">Insira o nome da instituição</string>
    <string name="error_instituicao_cnpj">Insira o cnpj da instituição</string>
    <string name="error_instituicao_email">Insira o email da instituição</string>
    <string name="error_instituicao_email_invalido">Insira um email válido</string>
    <string name="error_instituicao_senha">Insira o senha da instituição</string>
    <string name="error_instituicao_telefone">Insira o telefone da instituição</string>
    <string name="label_save_alteracao">salvar dados</string>
    <string name="label_nome_instituicao">nome da instituicao</string>
    <string name="label_button_salvar_dados">salvar dados</string>
    <string name="label_return_home"> Voltar para a tela principal</string>
    <string name="label_button_continuar_cadastro">Continuar cadastro</string>
    <string name="label_return_login">Voltar para a tela principal</string>
    <string name="label_rua">Rua</string>
    <string name="label_cep">Cep</string>
    <string name="label_bairro">Bairro</string>
    <string name="label_numero">Numero</string>
    <string name="button_localizacao">Utilizar endereço atual</string>

    <string name="label_button_cancelar_consulta">Cancelar consulta</string>
    <string name="label_return_consultas">Voltar para a tela de consultas</string>
    <string name="error_nome_completo">Insira o seu nome completo</string>

    <!-- label de Meus dados. -->
    <string name="label_button_continuar_alteracao">Continuar Alteração</string>
    <string name="labelCodigo">Código</string>
    <string name="labelCodigoNome">Código</string>
    <string name="label_meusdados_nome">Nome Completo</string>
    <string name="label_meusdados_datanascimento">Data de nascimento</string>
    <string name="label_meusdados_email">"Email"</string>
    <string name="label_meusdados_cpf">"CPF"</string>
    <string name="label_meusdados_telefone">"Telefone"</string>

    <!-- label de Meus dados Instituição -->

    <string name="label_button_alterar_insituicao">Continuar alteração </string>
    <string name="label_button_alterar_senha">Alterar Senha </string>

    <!-- label de Cadastro de disponibilidade. -->

    <string name="label_cadastro_data">Data</string>
    <string name="label_button_concluir_cadastro">Continuar Cadastro</string>
    <string name="label_cadastro_horas">Hora</string>
    <string name="label_cadastro_numero">Numero - Endereço</string>

    <!-- Spinner Estados -->
    <string name="label_btn_finalizar_cadastro">Finalizar Cadastro</string>

    <string name="button_cadastro_paciente">Paciente</string>

    <string name="button_cadastro_profissional">Profissional</string>
    <string name="button_cadastro_instituicao">Instutuição</string>
    <string name="button_info_perfil">Qual o meu perfil?</string>
    <string name="txt_descricao_paciente">  Se você está buscando apoio profissional, escolha a opção paciente.</string>
    <string name="txt_descricao_profissional">  Se você é um psicólogo ou psiquiatra e deseja fornecer consultas de forma voluntária, escolha a opção profissional.</string>
    <string name="txt_descricao_instituição">  Se você é representante de uma instituição que deseja fornecer consultas de valor irrisório ou grátis, escolha a opção instituição.</string>
    <string name="btn_escolha_perfil">Escolha o perfil</string>
    <string name="tvEndereco">Endereço : </string>


    <!--Textos - Modal de disponibilidade-->
    <string name="tvNumero">Numero : </string>
    <string name="tvCep">CEP : </string>
    <string name="tvBairro">Bairro : </string>
    <string name="tvDataHora">Data e Hora : </string>
    <string name="headerModalDisp">Disponibilidade</string>


    <string name="google_maps_key">AIzaSyBpex0TRdOrtQk3XVO-DiReMdPH_0Bz84Q</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="spinner_estados">
        <item>Estado</item>
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
        <item>Estrangeiro</item>
    </string-array>

</resources>
