<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MeusDadosInstituicaoActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="6dp"
        android:minHeight="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Meus Dados"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:textSize="25dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputNome"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/labelNome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:padding="0dp"
                    android:hint="@string/label_cadastro_instituicao_nome" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputCnpj"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/labelCnpj"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:singleLine="true"
                        android:inputType="phone"
                        android:maxLength="18"
                        android:padding="0dp"
                        android:hint="@string/label_cadastro_instituicao_cnpj" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:drawableLeft="@drawable/mail"
                    android:drawablePadding="10dp"
                    android:id="@+id/labelEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:padding="0dp"
                    android:hint="@string/label_cadastro_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputTelefone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/labelTelefone"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:padding="0dp"
                    android:inputType="phone"
                    android:maxLength="15"
                    android:drawableLeft="@drawable/phone"
                    android:hint="@string/label_cadastro_telefone" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonContinuarAlteracao"
                android:layout_width="220dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:textColor="#FFF"
                android:background="@drawable/button_cadastro_radius"
                android:textSize="18dp"
                android:text="@string/label_button_alterar_insituicao" />
            <Button
                android:id="@+id/buttonAlterarSenha"
                android:layout_width="220dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:textColor="#FFF"
                android:background="@drawable/button_cadastro_radius"
                android:textSize="18dp"
                android:text="@string/label_button_alterar_senha" />

            <TextView
                android:id="@+id/labelRetornarHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/label_return_login"
                android:textColor="@color/corLink"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>